Fix more broken links

--- a/event-info.html
+++ b/event-info.html
@@ -26,9 +26,9 @@
             <h1 id="mobile-close">X</h1>
         </div>
         <div class="nav-mobile-content">
-            <a href="index.html#event-info">About Us</a>
-            <a href="index.html#sponsors">Sponsors</a>
-            <a href="index.html#team">Team</a>
+            <a href="/#event-info">About Us</a>
+            <a href="/#sponsors">Sponsors</a>
+            <a href="/#team">Team</a>
             <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328">Tickets</a>
             <a href="event-info.html">Event Information</a>
         </div>
@@ -43,9 +43,9 @@
             </div>
             <div class="nav-right">
                 <div class="nav-right-content">
-                    <a href="index.html#event-info">About Us</a>
-                    <a href="index.html#sponsors">Sponsors</a>
-                    <a href="index.html#team">Team</a>
+                    <a href="/#event-info">About Us</a>
+                    <a href="/#sponsors">Sponsors</a>
+                    <a href="/#team">Team</a>
                     <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328">Tickets</a>
                     <a href="event-info.html">Event Information</a>
                     <div class="nav-mobile"></div>
