--- a/safeguarding/index.html
+++ b/safeguarding/index.html
@@ -45,11 +45,11 @@
             <h1 id="mobile-close">X</h1>
         </div>
         <div class="nav-mobile-content">
-            <a href="index.html#event-info">About Us</a>
-            <a href="index.html#sponsors">Sponsors</a>
-            <a href="index.html#team">Team</a>
+            <a href="/#event-info">About Us</a>
+            <a href="/#sponsors">Sponsors</a>
+            <a href="/#team">Team</a>
             <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328">Tickets</a>
-            <a href="event-info.html">Event Information</a>
+            <a href="/event-info.html">Event Information</a>
         </div>
     </div>
 
@@ -62,11 +62,11 @@
             </div>
             <div class="nav-right">
                 <div class="nav-right-content">
-                    <a href="hackthemidlands.com/index.html#event-info">About Us</a>
-                    <a href="hackthemidlands.com/index.html#sponsors">Sponsors</a>
-                    <a href="hackthemidlands.com/index.html#team">Team</a>
+                    <a href="/#event-info">About Us</a>
+                    <a href="/#sponsors">Sponsors</a>
+                    <a href="/#team">Team</a>
                     <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328">Tickets</a>
-                    <a href="hackthemidlands.com/event-info.html">Event Information</a>
+                    <a href="/event-info.html">Event Information</a>
                     <div class="nav-mobile"></div>
                 </div>
             </div>
@@ -87,12 +87,12 @@
             <h3>Consent form</h3>
             <p>We require all under 18s who attend our event to have a completed consent form. If you arrive without one you will <strong>NOT</strong> be permitted entry to the event. We will have a number of these on the checkin-desk if you have a parent/guardian present to sign it.</p>
             <p>We may accept scanned / emailed consent forms at our discression. We do not have to provide entry to this event.</p>
-            <p>You can get a consent form by clicking <a href="https://hackthemidlands.com/docs/safeguarding/ConsentForm.pdf">here</a>!</p>
+            <p>You can get a consent form by clicking <a href="/docs/safeguarding/ConsentForm.pdf">here</a>!</p>
             <br>
             <h3>Medical form</h3>
             <p>We also require all our under 18s to have a physical medical form.</p>
             <p>Although we will always administer emergency first aid, if prior consent is not given you will not be allowed to attend the event</p>
-            <p>You can get a medical form by clicking <a href="https://hackthemidlands.com/docs/medical/MedicalForm.pdf">here</a>!</p>
+            <p>You can get a medical form by clicking <a href="/docs/medical/MedicalForm.pdf">here</a>!</p>
         </div>
     </section>
 
@@ -168,7 +168,7 @@
                     </li>
                 </ul>
                 <p>The above information has been shared and confirmed with the Birmingham Local Area Designated Safeguarding Officer.</p>
-                <p>Our Child Protection Policy can be found <a href=https://hackthemidlands.com/docs/safeguarding/ChildProtectionPolicy.pdf>here</a></p>
+                <p>Our Child Protection Policy can be found <a href=/docs/safeguarding/ChildProtectionPolicy.pdf>here</a></p>
         </div>
     </section>
 
