--- a/event-info.html
+++ b/event-info.html
@@ -29,7 +29,7 @@
             <a href="/#event-info">About Us</a>
             <a href="/#sponsors">Sponsors</a>
             <a href="/#team">Team</a>
-            <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328">Tickets</a>
+            <a href="/tickets">Tickets</a>
             <a href="event-info.html">Event Information</a>
         </div>
     </div>
@@ -46,7 +46,7 @@
                     <a href="/#event-info">About Us</a>
                     <a href="/#sponsors">Sponsors</a>
                     <a href="/#team">Team</a>
-                    <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328">Tickets</a>
+                    <a href="/tickets">Tickets</a>
                     <a href="event-info.html">Event Information</a>
                     <div class="nav-mobile"></div>
                 </div>
