--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#event-info">About Us</a>
             <a href="#sponsors">Sponsors</a>
             <a href="#team">Team</a>
-            <a href="https://www.eventbrite.co.uk/e/hackthemidlands-40-tickets-62655912521">Get Tickets</a>
+            <a href="/tickets">Get Tickets</a>
             <a href="event-info.html">Event Information</a>
         </div>
       </div>
@@ -64,7 +64,7 @@
                                 <a href="#event-info">About Us</a>
                                 <a href="#sponsors">Sponsors</a>
                                 <a href="#team">Team</a>
-                                <a href="https://www.eventbrite.co.uk/e/hackthemidlands-40-tickets-62655912521">Get Tickets</a>
+                                <a href="/tickets">Get Tickets</a>
                                 <a href="event-info.html">Event Information</a>
                             </div>
                             <div class="nav-mobile"></div>
@@ -76,14 +76,14 @@
             <div class="header-content">
                 <h1>Are you ready for <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands? </span></span></h1>
                 <h3>26<sup>th</sup> - 27<sup>th</sup> October</h3>
-                <a href="https://www.eventbrite.co.uk/e/hackthemidlands-40-tickets-62655912521"><button id="apply-button">Get Tickets</button></a>
+                <a href="/tickets"><button id="apply-button">Get Tickets</button></a>
                 <a href="sponsorship.pdf"><button id="sponsor-button">Sponsor Us</button></a>
                 <a href="https://www.youtube.com/watch?v=bakpTO7weKk"><h3 style="font-size: 15px; padding-top: 10px; font-weight: 500">Watch The Video!</h3></a>
             </div>
             <div class="social-links-header">
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands/"><img id="facebook" src="images/facebook.svg"/></a>
                 <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="twitter" src="images/twitter.svg"/></a>
-                <a target="_blank" href="https://www.eventbrite.co.uk/e/hackthemidlands-40-tickets-62655912521"><img src="images/event-brite.png"/></a>
+                <a target="_blank" href="/tickets"><img src="images/event-brite.png"/></a>
             </div>
         </section>
         <section id="event-countdown">
@@ -135,7 +135,7 @@
                 </div>
                 <h3>Join Us!</h3>
                 <p>Get your tickets now for HackTheMidlands and be guaranteed a spot in this year's hackathon!</p>
-                <a href="https://www.eventbrite.co.uk/e/hackthemidlands-40-tickets-62655912521"><button>Get Tickets</button></a>
+                <a href="/tickets"><button>Get Tickets</button></a>
             </div>
             <div class="google-maps">
                 <div id="faq-slit-bottom"></div>
@@ -246,7 +246,7 @@
                 <h3>Made with <img src="images/heart.svg"> by <a href="http://www.alexwiley.co.uk">alex wiley</a></h3>
             </div>
             <div class="social-links" id="footer-social">
-                <a target="_blank" href="https://www.eventbrite.co.uk/e/hackthemidlands-40-tickets-62655912521"><img src="images/event-brite.png"/></a>
+                <a target="_blank" href="/tickets"><img src="images/event-brite.png"/></a>
                 <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="twitter" src="images/twitter.svg"/></a>
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands"><img src="images/facebook.svg"/></a>
             </div>
