--- a/safeguarding/index.html
+++ b/safeguarding/index.html
@@ -48,7 +48,7 @@
             <a href="/#event-info">About Us</a>
             <a href="/#sponsors">Sponsors</a>
             <a href="/#team">Team</a>
-            <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328">Tickets</a>
+            <a href="/tickets">Tickets</a>
             <a href="/event-info.html">Event Information</a>
         </div>
     </div>
@@ -65,7 +65,7 @@
                     <a href="/#event-info">About Us</a>
                     <a href="/#sponsors">Sponsors</a>
                     <a href="/#team">Team</a>
-                    <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328">Tickets</a>
+                    <a href="/tickets">Tickets</a>
                     <a href="/event-info.html">Event Information</a>
                     <div class="nav-mobile"></div>
                 </div>
