--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <!--Stylesheets-->
 
         <title>HackTheMidlands</title>
-        <link type="text/css" rel="stylesheet" href="./style/css/main.css"/>
+        <link type="text/css" rel="stylesheet" href="./css/main.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:title" content="24 Hour Hackathon in Birmingham" />
         <meta property="og:description" content="HackTheMidlands is a 24 hour hackathon based at Millenium Point in Birmingham. Whether you're a newbie or an expert, come along to learn, build and share and have a blast at the same time!" />
