--- a/sponsor.html
+++ b/sponsor.html
@@ -3,7 +3,7 @@
 <head>
     <title>Hack The Midlands</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link type="text/css" rel="stylesheet" href="./style/css/typeform.css"/>
+    <link type="text/css" rel="stylesheet" href="./css/typeform.css"/>
 
     <!--Add the title of your typeform below-->
     <title>Contact Form</title>
