--- a/countdown.html
+++ b/countdown.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <link rel="stylesheet" href="style/css/countdown.css"/>
+        <link rel="stylesheet" href="css/countdown.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js"></script>
     </head>
