--- a/event-info.html
+++ b/event-info.html
@@ -3,7 +3,7 @@
     <!--Stylesheets-->
 
     <title>HTM | Event Info</title>
-    <link type="text/css" rel="stylesheet" href="./style/css/event-info-main.css"/>
+    <link type="text/css" rel="stylesheet" href="./css/event-info-main.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="http://hackthemidlands.com/images/hackthemidlands-facebook.jpg" />
     <meta property="og:url" content="http://www.hackthemidlands.com" />
@@ -14,7 +14,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/featherlight/1.5.0/featherlight.min.css" type="text/css" rel="stylesheet"/>
 
     <!--Timetable-->
-    <link rel="stylesheet" href="./style/css/timetablejs.css">
+    <link rel="stylesheet" href="./css/timetablejs.css">
 
     <script src="js/timetable.min.js"></script>
     <script src="js/clock.js"></script>
