Website made more mobile friendly

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               height: 100px;
             }
             #footer-logo img{
-              height: 70px;
+              height: 50px;
               margin-top: -2px;
               margin-left: 20px;
             }
@@ -77,22 +77,24 @@
                     </div>
                 </div>
             <div class="header-content">
-                <h1>Are you ready for <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands? </span></span></h1>
+                <h1>Are you ready for <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands 4.0? </span></span></h1>
                 <h3>26<sup>th</sup> - 27<sup>th</sup> October</h3>
                 <a href="/tickets"><button id="apply-button">Get Tickets</button></a>
                 <a href="sponsorship.pdf"><button id="sponsor-button">Sponsor Us</button></a>
                 <a href="https://www.youtube.com/watch?v=bakpTO7weKk"><h3 style="font-size: 15px; padding-top: 10px; font-weight: 500">Watch The Video!</h3></a>
             </div>
             <div class="social-links-header">
-                <a target="_blank" href="https://www.facebook.com/hackthemidlands/"><img id="facebook" src="images/facebook.svg"/></a>
-                <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="twitter" src="images/twitter.svg"/></a>
-                <a target="_blank" href="/tickets"><img src="images/event-brite.png"/></a>
+                <a target="_blank" href="/tickets"><img id="logo" src="images/event-brite.png" /></a>
+                <a target="_blank" href="https://discord.gg/dHV72ND"><img id="logo" src="images/discord.svg" /></a>
+                <a target="_blank" href="https://www.facebook.com/hackthemidlands"><img id="logo" src="images/facebook.svg" /></a>
+                <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="logo" src="images/twitter.svg" /></a>
+                <a target="_blank" href="https://www.linkedin.com/company/hackthemidlands/"><img id="logo" src="images/linkedin.png" /></a>
             </div>
         </section>
         <section id="event-countdown">
             <div class="container">
                 <img src="./images/confetti.png"/>
-                <h3>HackTheMidlands <br/><span>Will start in:</span></h3>
+                <h3>HackTheMidlands 4.0<br/><span>Will start in:</span></h3>
                 <div id="countdown">
                     <div>
                         <span class="days"></span>
@@ -208,7 +210,7 @@
                 <div class="team-container__header">
                     <h2>Meet the team</h2>
                     <hr/>
-                    <h3>Without a team of dedicated volunteers this hackathon simply would not happen. Here's your chance to meet the awesome people who are behind <span class="span-capital">hackTheMidlands</span></h3>
+                    <h3>Without a team of dedicated volunteers this hackathon simply would not happen. Here's your chance to meet the awesome people who are behind <span class="span-capital">HackTheMidlands.</span></h3>
                 </div>
                 <div class="team-grid-container">
                     {% for person in site.data.team %}
@@ -237,12 +239,14 @@
                 <img src="./images/htmlogo.png"/>
             </div>
             <div id="footer-credit">
-                <h3>Made with <img src="images/heart.svg"> by <a href="http://www.alexwiley.co.uk">alex wiley</a></h3>
+                <h3>Made with <img src="images/heart.svg"> by <a href="http://www.alexwiley.co.uk">Alex Wiley</a></h3>
             </div>
             <div class="social-links" id="footer-social">
                 <a target="_blank" href="/tickets"><img src="images/event-brite.png"/></a>
+                <a target="_blank" href="https://www.linkedin.com/company/hackthemidlands/"><img src="images/linkedin.png"/></a>
                 <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="twitter" src="images/twitter.svg"/></a>
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands"><img src="images/facebook.svg"/></a>
+                <a target="_blank" href="https://discord.gg/dHV72ND"><img src="images/discord.svg"/></a>
             </div>
         </footer>
 
