--- a/event-info.html
+++ b/event-info.html
@@ -54,7 +54,7 @@
         </div>
         <div class="header-title">
             <h1>Event information</h1>
-            <h4>Hackthemidlands</h4>
+            <h4>HackTheMidlands 4.0</h4>
         </div>
     </section>
 
@@ -206,9 +206,9 @@
         <div class="container">
             <h2>Submissions</h2>
             <hr/>
-            <a href="http://hackthemidlands3.devpost.com/"><img src="http://devpost2.assetspost.com/assets/reimagine2/devpost-logo-646bdf6ac6663230947a952f8d354cad.svg" alt="devpost"/></a>
-            <h3>All submissions can be uploaded to <a href="http://hackthemidlands3.devpost.com/">Devpost</a> where we
-                shall judge them and award winnders. If you have not already signed up to <strong>Devpost</strong> then
+            <a href="http://hackthemidlands4.devpost.com/"><img src="http://devpost2.assetspost.com/assets/reimagine2/devpost-logo-646bdf6ac6663230947a952f8d354cad.svg" alt="devpost"/></a>
+            <h3>All submissions can be uploaded to <a href="http://hackthemidlands4.devpost.com/">Devpost</a> where we
+                shall judge them and award winners. If you have not already signed up to <strong>Devpost</strong> then
                 make sure you do it <strong>NOW!</strong></h3>
             <h1>NOW GO HACK AND HAVE FUN!</h1>
         </div>
