GitHub page added to website
Both on the main banner, and footer

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <a target="_blank" href="https://discord.gg/dHV72ND"><img id="logo" src="images/discord.svg" /></a>
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands"><img id="logo" src="images/facebook.svg" /></a>
                 <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="logo" src="images/twitter.svg" /></a>
+                <a target="_blank" href="https://github.com/hackthemidlands/"><img id="logo" src="images/github.jpg" /></a>
                 <a target="_blank" href="https://www.linkedin.com/company/hackthemidlands/"><img id="logo" src="images/linkedin.png" /></a>
             </div>
         </section>
@@ -242,11 +243,12 @@
                 <h3>Made with <img src="images/heart.svg"> by <a href="http://www.alexwiley.co.uk">Alex Wiley</a></h3>
             </div>
             <div class="social-links" id="footer-social">
-                <a target="_blank" href="/tickets"><img src="images/event-brite.png"/></a>
                 <a target="_blank" href="https://www.linkedin.com/company/hackthemidlands/"><img src="images/linkedin.png"/></a>
+                <a target="_blank" href="https://www.github.com/hackthemidlands/"><img src="images/github.jpg"/></a>
                 <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="twitter" src="images/twitter.svg"/></a>
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands"><img src="images/facebook.svg"/></a>
                 <a target="_blank" href="https://discord.gg/dHV72ND"><img src="images/discord.svg"/></a>
+                <a target="_blank" href="/tickets"><img src="images/event-brite.png"/></a>
             </div>
         </footer>
 
