--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="faq-post">
                     <h2>What are the sleeping arrangements?</h2>
-                    <p>Since HackTheMidlands is a 24 hour hackathon, we reccommend you take regular breaks. We will have an area dedicated for sleeping and we will have seperate sleeping areas for Under 18s. We also reccommend that you bring some comfortable clothes to sleep in.</p>
+                    <p>Since HackTheMidlands is a 24 hour hackathon, we reccommend you take regular breaks. We will have an area dedicated for sleeping and we will have gender seperated sleeping areas for Under 18s. We also reccommend that you bring some comfortable clothes to sleep in.</p>
                 </div>
                 <div class="faq-post">
                     <h2>Can Under 18s Attend?</span></h2>
