--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <h4>Walking and Cycling</h4>
                     <p>Millennium Point is within a ten minute wal from the Birmingham town centre and there are cycle parking faciities nearby, though be aware that HackTheMidlands is an overnight event.</p>
                     <h4>Train</h4>
-                    <p>The nearest train stations are Birmingham New Street (BHM) and Birmingham Moor Street (BMO) which are a 15 minute walk from the venue. Snow Hill Station (BSW) is also within walking distance. The train stations have frequent connections around the West Midlands as well as many cities in England and Birmingham International Airport</p>
+                    <p>The nearest train stations are Birmingham New Street (BHM) and Birmingham Moor Street (BMO) which are a 15 minute walk from the venue. Snow Hill Station (BSW) is also within walking distance. The train stations have frequent connections around the West Midlands as well as many cities in England and Birmingham International Airport.</p>
                     <h4>Bus</h4>
                     <p>From the city centre to the Millennium Point entrance on Jennings Road, you can take the busses 14 (Stop BS7), 55/55A, 90 or 94 (Stop BS9).</p>
                     <h4>Car</h4>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="faq-post">
                     <h2>I don't have a team</h2>
-                    <p>Don't worry! Many people don't have a team when they turn up to a hackathon. You wull be able to meet people and network before the hacking begins, and we also have our Discord server where people are looking for teams and teams are looking for members. </p>
+                    <p>Don't worry! Many people don't have a team when they turn up to a hackathon. You will be able to meet people and network before the hacking begins, and we also have our Discord server where people are looking for teams and teams are looking for members. </p>
                 </div>
                 <div class="faq-post">
                     <h3>Code of Conduct</h3>
