--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <h2>How do I get there?</h2>
                     <p>HackTheMidlands is hosted in Millennium Point, Curzon Street, Birmingham, B4 7XG. It is really easy to reach by public transport.</p>
                     <h4>Walking and Cycling</h4>
-                    <p>Millennium Point is within a ten minute wal from the Birmingham town centre and there are cycle parking faciities nearby, though be aware that HackTheMidlands is an overnight event.</p>
+                    <p>Millennium Point is within a ten minute walk from the Birmingham town centre and there are cycle parking faciities nearby, though be aware that HackTheMidlands is an overnight event.</p>
                     <h4>Train</h4>
                     <p>The nearest train stations are Birmingham New Street (BHM) and Birmingham Moor Street (BMO) which are a 15 minute walk from the venue. Snow Hill Station (BSW) is also within walking distance. The train stations have frequent connections around the West Midlands as well as many cities in England and Birmingham International Airport.</p>
                     <h4>Bus</h4>
